metadata-classic/objects/CheckerAPISettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BaseURL__c</fullName>
        <label>BaseURL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Checker API Settings</label>
</CustomObject>